test_programs/compile_failure/noirc_frontend_tests_bound_checks_underflowing_i8/src/main.nr

        fn main() {
            let _: i8 = -129;
        }
        